[project]
name = "ot-ai-api"
version = "0.1.0"
description = "API for Open Targets serving as a centralized hub for AI-driven endpoints"
readme = "README.md"
authors = [{ name = "Open Targets", email = "contact@opentargets.org" }]

requires-python = ">=3.13"
dependencies = ["fastapi[standard]", "requests>=2.32.3", "uvicorn>=0.32.0"]

[dependency-groups]
lint = ["ruff>=0.7.1"]
